# TencentDB-Agent-Memory

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  INSTALL.md  INSTALL_CN.md  PR-DESCRIPTION-CACHE.md  PR-DESCRIPTION.md  PROMPT-CACHE-ANALYSIS.md  README.md  README_CN.md  bugs.md  clean-msg.txt  commit-message.txt  conftest.py  index.ts  openclaw.plugin.json  opencode.plugin.ts  package-lock.json  package.json  pr-diff.txt  tdai-gateway.yaml  tsconfig.adapter-sdk-consumer.json  tsdown.config.ts  vitest.config.ts  多平台适配方式对比.md  新平台适配指南.md  适配架构图.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
MemoryKnowledge/: README.md
__tests__/: adapter-sdk-node.test.ts  codex-hooks-adapter.test.ts  mcp-adapter.test.ts  postinstall.test.ts  prompt-cache-stability.test.ts
adapter-sdk/: README.md  tsconfig.json
adk-plugin/: README.md
architecture/: issue-235-adapter-data-flow.md  platform-adapter-comparison.md
bridge/: mcp_health.py
bridge_adapter/: README.md  SHA256SUMS  __init__.py  base.py  client.py  codex_adapter.py  hermes_v2_adapter.py  integrity.py  plugin.yaml  pyproject.toml  test_codex_adapter.py
claude-code-adapter/: README.md  settings.example.json  tdai-memory-hook.mjs
claude-code-plugin/: README.md  README_CN.md
claudecode-plugin/: vitest.config.ts
codebuddy-plugin/: pack.sh
codex-plugin/: .mcp.json  README.md  adapter-profile.json  tdai-gateway.example.json  vitest.config.ts
crewai-plugin/: README.md  pyproject.toml
crewai-plugin/memory_tencentdb_crewai/: __init__.py  memory.py
crewai-plugin/tests/: __init__.py  test_client.py  test_memory.py
deer-flow-adapter/: README.md
dify-plugin/: README.md  requirements.txt
dify-plugin-tdai-memory/: .difyignore  ARCHITECTURE.md  README.md  main.py  manifest.yaml  pyproject.toml
dify-plugin-tdai-memory/provider/: tdai_memory.py  tdai_memory.yaml
dify-plugin-tdai-memory/scripts/: mock_dify_plugin_server.py  quickstart-gateway-mock-e2e.sh
dify-plugin-tdai-memory/tests/: test_gateway_client.py  test_main_entrypoint.py  test_mock_dify_server.py  test_plugin_manifest.py  test_provider_credentials.py  test_tool_helpers.py
dify-plugin-tdai-memory/tools/: __init__.py  base.py  client.py  tdai_capture.py  tdai_capture.yaml  tdai_conversation_search.py  tdai_conversation_search.yaml  tdai_health.py  tdai_health.yaml  tdai_memory_search.py  tdai_memory_search.yaml  tdai_recall.py  tdai_recall.yaml  tdai_session_end.py  tdai_session_end.yaml
docs/: 01-概述-这是什么.md  02-代码地图-项目长什么样.md  03-一条消息的旅程-数据流全链路.md  04-存储层-搜索是怎么工作的.md  05-管道调度-何时触发提取和画像.md  06-核心文件精读.md  ADAPTER-INTEGRATION.md  ADAPTER_GUIDE.md  AI-SDK-MIDDLEWARE.md  ARCHITECTURE.md  DEMO.md  DIFY-ADAPTER.md  INTEGRATION.md  Issue-120-memory注入上下文结构与缓存影响.md  Issue-120-session级系统提示去重研究.md  Issue-120-showInjected对话膨胀趋势与优化方案.md  Issue-120-会话级系统提示去重研究.md  Issue-120-实现后验证与结论.md  PLATFORM-COMPARISON.md  PROMPT-CACHE-MEMORY-INJECTION.md  README.md  RECALL-HISTORY-COMPACTION.md  adapter-architecture-v2.md  adapter-architecture.md  adapter-sdk-design.md  adapter-sdk.md  adapter-sdk_CN.md  analysis-report.md  checkpoint-reconciliation.md  claude-code-adapter-setup.md  claude-code-adapter.md  claude-code.md  claude-code_CN.md  codex-adapter.md  codex-mcp-adapter.md  codex.md  codex_CN.md  coding-agent-adapter-quickstart.md  core-engine-and-platform-adapters_CN.md  coverage-summary.md  (+42 more)
evidence/: README.md  SUMMARY.md  persona.md
hermes-plugin/: conftest.py
integrations/microsoft-agent-framework/: .gitignore  README.md  pyproject.toml
integrations/microsoft-agent-framework/src/tencentdb_agent_memory_agent_framework/: __init__.py  client.py  provider.py
integrations/microsoft-agent-framework/tests/: test_provider.py
kimi-plugin/: README.md  manifest.json
langgraph-adapter/: README.md
llamaindex-plugin/: README.md  pyproject.toml
llamaindex-plugin/memory_tencentdb_llamaindex/: __init__.py  memory_block.py
llamaindex-plugin/tests/: __init__.py  test_memory_block.py
python-gateway-sdk/: README.md  pyproject.toml
python-gateway-sdk/memory_tencentdb_gateway/: __init__.py  client.py
qwen-code-extension/: README.md  qwen-extension.json
(+1025 files in other folders)
