[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-tencentdb-crewai"
version = "0.1.0"
description = "CrewAI Memory adapter for TencentDB Agent Memory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TencentDB Agent Memory contributors" }]
dependencies = [
  "crewai>=1.15.5,<2",
  "memory-tencentdb-gateway>=0.1,<1",
]
keywords = ["crewai", "agent-memory", "tencentdb", "long-term-memory"]

[project.urls]
Repository = "https://github.com/TencentCloud/TencentDB-Agent-Memory"
Issues = "https://github.com/TencentCloud/TencentDB-Agent-Memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_tencentdb_crewai*"]
