[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-tencentdb-gateway"
version = "0.1.0"
description = "Dependency-free Python client for TencentDB Agent Memory Gateway"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "TencentDB Agent Memory contributors" }]
keywords = ["agent-memory", "tencentdb", "gateway", "python"]

[project.urls]
Repository = "https://github.com/TencentCloud/TencentDB-Agent-Memory"
Issues = "https://github.com/TencentCloud/TencentDB-Agent-Memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_tencentdb_gateway*"]
