[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tencentdb-agent-memory-agent-framework"
version = "0.1.0"
description = "Microsoft Agent Framework context provider for TencentDB Agent Memory"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["agent-framework-core>=1.3.0,<2"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.hatch.build.targets.wheel]
packages = ["src/tencentdb_agent_memory_agent_framework"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
